skins/larry/mail.css
/* ... */
#messagelist tr td.threads {
	width: 26px;
}

.webkit #messagelist tr td.threads {
	width: 30px;
}

#messagelist tr td.threads,
#messagelist tr td.threads + td {
	border-left: 0;
}

#messagelist tr td.size {
	width: 60px;
	text-align: right;
}

#messagelist thead tr td.size {
	text-align: left;
}

#messagelist tr td.fromto,
#messagelist tr td.from,
#messagelist tr td.to,
#messagelist tr td.cc,
#messagelist tr td.replyto {
	width: 200px;
}

#messagelist tr td.date {
	width: 125px;
}

#messagelist tr.message {
/*	background-color: #fff; */
}

#messagelist tr.thread.expanded td {
	background-color: #ededed;
}

#messagelist tr.unread {
	font-weight: bold;
/*	background-color: #fff; */
}

#messagelist tr.flagged td,
#messagelist tr.flagged td a {
	color: #f30;
}

#messagelist thead tr td.sortedASC a,
#messagelist thead tr td.sortedDESC a {
	color: #004458;
	text-decoration: underline;
	background: url(images/listicons.png) right -912px no-repeat;
}

#messagelist thead tr td.sortedASC a {
	background-position: right -944px;
}

#messagelist td img {
	vertical-align: middle;
	display: inline-block;
}

#messagelist tbody td a {
	color: #333;
	text-decoration: none;
	white-space: nowrap;
	cursor: default;
}

#messagelist tbody tr td.flag,
#messagelist tbody tr td.status,
#messagelist tbody tr td.subject span.status {
	cursor: pointer;
}

#messagelist tr td.flag span,
#messagelist tr td.status span,
#messagelist tr td.attachment span,
#messagelist tr td.priority span {
	display: block;
	width: 20px;
}

#messagelist tr td div.collapsed,
#messagelist tr td div.expanded,
#messagelist tr td.threads div.listmenu,
#messagelist tr td.attachment span.attachment,
#messagelist tr td.attachment span.report,
#messagelist tr td.priority span.priority,
#messagelist tr td.priority span.prio1,
#messagelist tr td.priority span.prio2,
#messagelist tr td.priority span.prio3,
#messagelist tr td.priority span.prio4,
#messagelist tr td.priority span.prio5,
#messagelist tr td.flag span.flagged,
#messagelist tr td.flag span.unflagged,
#messagelist tr td.flag span.unflagged:hover,
#messagelist tr td.status span.status,
#messagelist tr td.status span.msgicon,
#messagelist tr td.status span.deleted,
#messagelist tr td.status span.unread,
#messagelist tr td.status span.unreadchildren,
#messagelist tr td.subject span.msgicon,
#messagelist tr td.subject span.deleted,
#messagelist tr td.subject span.unread,
#messagelist tr td.subject span.replied,
#messagelist tr td.subject span.forwarded,
#messagelist tr td.subject span.unreadchildren {
	display: inline-block;
	vertical-align: middle;
	height: 18px;
	width: 20px;
	padding: 0;
	background: url(images/listicons.png) -100px 0 no-repeat;
}

#messagelist tbody tr td.attachment span.attachment {
	background-position: 0 -996px;
}

#messagelist thead tr td.attachment span.attachment {
	background-position: -24px -997px;
}

#messagelist tbody tr td.attachment span.report {
	background-position: -24px -1116px;
}

#messagelist tr td.priority span.prio5 {
	background-position: 0 -1905px;
}

#messagelist tr td.priority span.prio4 {
	background-position: 0 -1885px;
}

#messagelist tr td.priority span.prio2 {
	background-position: 0 -1865px;
}

#messagelist tr td.priority span.prio1 {
	background-position: 0 -1845px;
}

#messagelist tbody tr td.flag span.flagged {
	background-position: 0 -1036px;
}

#messagelist thead tr td.flag span.flagged {
	background-position: -24px -1036px;
}

#messagelist tr td.status span.msgicon:hover {
	background-position: -23px -1056px;
}

#messagelist tr td.flag span.unflagged:hover {
	background-position: -23px -1076px;
}

#messagelist tr td.subject span.msgicon,
#messagelist tr td.subject span.unreadchildren {
	background-position: 0 -1056px;
	margin: 0 1px 0 0;
	width: 24px;
}

#messagelist tr td.subject span.replied {
	background-position: 0 -1076px;
}

#messagelist tr td.subject span.forwarded {
	background-position: 0 -1096px;
}

#messagelist tr td.subject span.replied.forwarded {
	background-position: 0 -1116px;
}

#messagelist tr td.status span.msgicon,
#messagelist tr td.flag span.unflagged,
#messagelist tr td.status span.unreadchildren {
	background-position: 0 1056px; /* no icon */
}
/*
#messagelist tr td.status span.msgicon:hover {
	background-position: 0 -272px;
}
*/
#messagelist tr td.status span.deleted,
#messagelist tr td.status span.deleted:hover,
#messagelist tr td.subject span.deleted {
	background-position: -22px -1096px;
}

#messagelist tr td.status span.status,
#messagelist tr td.status span.unread,
#messagelist tr td.subject span.unread,
#messagelist tr td.status span.unread:hover {
	background-position: 0 -1016px;
}

#messagelist thead tr td.status span.status {
	background-position: -24px -1016px;
}

#messagelist tr td div.collapsed {
	background-position: 0 -1136px;
	cursor: pointer;
}

#messagelist tr td div.expanded {
	background-position: 0 -1156px;
	cursor: pointer;
}

#messagelist tr td.threads div.listmenu {
	background-position: 0 -976px;
	cursor: pointer;
	width: 26px;
}

#messagelist thead tr td.subject,
#messagelist tbody tr td.subject {
	width: 99%;
	white-space: nowrap;
}

#messagelist tbody tr td.subject a {
	cursor: default;
	vertical-align: middle; /* #1487091 */
}

/* thread parent message with unread children */
#messagelist tbody tr.unroot td.subject a {
	text-decoration: underline;
}

/**** tree indicators ****/

#messagelist tbody tr td span.branch div {
	display: inline-block;
}

#messagelist tbody tr td span.branch div.tree {
	width: 15px;
}

#listoptions ul.proplist {
	min-width: 16em;
}

/**** message view ****/

#mailpreviewframe {
	display: none;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	bottom: 28px;
}

#messagecontframe {
	border: 0;
	border-radius: 4px 4px 0 0;
}

#messagecontent {
	position: absolute;
	top: 110px;
	left: 0;
	width: 100%;
	bottom: 27px;
	overflow: auto;
}
/* ... */

